start of removing Open_binary and Open_text (windows specific difference)

--- a/todo.txt
+++ b/todo.txt
@@ -30,6 +30,10 @@ it's confusing anyway
 
 **** less: remove tbl? just use map?
 
+**** remove terminfo
+
+**** remove stdlib/stream.ml?
+
 *** refactoring
 
 **** less: remove Ident.xxx that are really a Map?
