--- a/changes.txt
+++ b/changes.txt
@@ -12,9 +12,8 @@
 
 ** stdlib
 - frontport uchar.ml from 4.03
-- frontport int.ml and float.ml from 4.08
-- frontport option.ml and result from 4.08
-  and result pervasive type from
+- frontport bool.ml, int.ml, and float.ml from 4.08
+- frontport option.ml and result from 4.08 and also the result pervasive type
 
 ** test infra
 - add Dockerfile and docker.yml GHA (Github Action) CI
