remove more files supporting old arches and OSes
no more alpha, mips, sparc, 68k, hppa, etc.

--- a/changes.txt
+++ b/changes.txt
@@ -27,6 +27,9 @@
   faster build, and the production of .cmt in _build/ allowing
   merlin (and efuns) to work correctly for file navigation and type info!
 
+** internals
+- remove files and support for old arch and OSes (alpha, mips, sparc, vax, etc.)
+  
 * Beta (2018) (plan9 support)
 
 ** os
