--- a/changes.txt
+++ b/changes.txt
@@ -2,32 +2,36 @@
 
 * TODO
 
+** compilers
+- restore asmcomp/ for x86 at least (and x86_64 later and Arm)
+  
 ** dev infra
-- semgrep.yml
+- restore working semgrep.yml
 
 ** test infra
-- shell.nix and nix.yml macOS and Linux GHA CI checks
+- restore testasmcomp
 
-* 0.1 (Q2 2025) (Dockerfile, Github Actions CI checks, dune, tests)
+* 0.1 (Q2 2025) (Dockerfile, Nix, Github Actions CI checks, dune, tests)
 #TODO: ported enough features so can compile some of xix via bootstrap-mk.sh
 
 ** stdlib
 - frontport Obj.is_int and Obj.xxx_tag from 2.02
-- frontport Printf.kprintf and ksprintf from 3.08
+- frontport Printf.kprintf and ksprintf and support for %! from 3.08 
 - frontport uchar.ml from 4.03
 - frontport bool.ml, int.ml, and float.ml from 4.08
 - frontport option.ml and result from 4.08 and also the result pervasive type
 
 ** language
 - partial support for attributes ([@@...]) and object types (<Cap.exec; ..>)
-  just enough so can parse more recent code in xix
+  just enough so can parse the code in xix (but discard the constructs)
 
 ** typechecker
 - frontport ability to type string-format in higher order functions like
   Logs.info (fun m -> m "%s" name) (extension to type_expect())
   
 ** test infra
-- add Dockerfile and docker.yml GHA (Github Action) CI
+- add Dockerfile and docker.yml GHA (Github Action) CI checks
+- add shell.nix and nix.yml GHA for macOS and Linux CI checks
 - add back the test/ and testasmcomp/ (but not testobjects/) from
   the OCaml github repo at the 1.07 time (commit a234a77991)
   and run them in the Dockerfile and in CI
@@ -43,7 +47,7 @@
 - remove files and support for old arch (alpha, mips, sparc, vax, etc.)
   and OSes (macOS, windows NT, Solaris)
 
-** misc  
+** misc
 - fix configure to work with recent gcc/clang (add some
   -Wno-implicit-function-declaration and other flags)
 - frontport ability to store source in Foo.ml or foo.ml  
@@ -57,7 +61,7 @@
 * Alpha (2015) (fork of OCaml 1.07 without OO and functors + native ARM)
 # see also pad.txt history section
 
-** compiler
+** language
 - remove support for classes and objects (OO) as it complicated a lot the
   typechecking code for a controversial features (typeclasses or
   implicits are IMHO better). See also REMOVE_OBJ.patch.
@@ -67,11 +71,13 @@
   for educational purpose (part of my principia softwarica project).
   This meant slightly refactor the asmcomp/ code that was the only user
   of functors (and maybe set and map)
+- backport (frontport?) a few features from recent OCaml to ocaml-light:
+    * record 'with' (see diff_with_record)
+    * backtrace?
+
+** compilers  
 - removed some native targets: alpha, hppa, m68k, power, and sparc,
   mips. I just kept i386 and later backported the ARM port from ocaml 2.01!
-- backport (frontport?) a few features from recent OCaml to ocaml-light:
-    * backtrace?
-    * record 'with' (see diff_with_record)
 
 ** stdlib
 - backported a few modules or functions from recent OCaml
