--- a/changes.txt
+++ b/changes.txt
@@ -16,10 +16,10 @@
 
 ** stdlib
 - frontport Obj.is_int and Obj.xxx_tag from 2.02
-- frontport Printf.kprintf and ksprintf and support for %! from 3.08 
+- frontport Printf.kprintf and ksprintf and support for %! to flush from 3.08
 - frontport uchar.ml from 4.03
 - frontport bool.ml, int.ml, and float.ml from 4.08
-- frontport option.ml and result from 4.08 and also the result pervasive type
+- frontport option.ml and result from 4.08 as well as the result pervasive type
 
 ** language
 - partial support for attributes ([@@...]) and object types (<Cap.exec; ..>)
