--- a/changes.txt
+++ b/changes.txt
@@ -15,14 +15,15 @@
 # ported enough features so I can compile some of xix via bootstrap-mk.sh and mk
 
 ** stdlib
-- frontport Obj.is_int and Obj.xxx_tag from 2.02
-- frontport Printf.kprintf and ksprintf and support for %! to flush from 3.08
-- partial port of bytes.ml from 4.02.0
-- frontport uchar.ml from 4.03
-- frontport fun.ml (but without labels) and Fun.protect from 4.07.2
-- frontport bool.ml, int.ml, and float.ml from 4.08
-- frontport option.ml and result from 4.08 as well as the result pervasive type
-
+- backport Obj.is_int and Obj.xxx_tag from 2.02
+- backport Printf.kprintf and ksprintf and support for %! to flush from 3.08
+- partial backport of bytes.ml from 4.02.0
+- backport uchar.ml from 4.03
+- partial backport of string.ml xxx_ascii functions from 4.03
+- backport fun.ml (but without labels) and Fun.protect from 4.07.2
+- backport bool.ml, int.ml, and float.ml from 4.08
+- backport option.ml and result from 4.08 as well as the result pervasive type
+  
 ** language
 - partial support for attributes ([@@...]), object types (<Cap.exec; ..>),
   objet cast (foo :> Cap.exec), object defs (object ... end),
@@ -30,7 +31,7 @@
   that we can parse the code in xix (but we discard the constructs)
 
 ** typechecker
-- frontport ability to type string-format in higher order functions like
+- backport ability to type string-format in higher order functions like
   Logs.info (fun m -> m "%s" name) (extension to type_expect())
 
 ** test infra
@@ -55,7 +56,7 @@
 ** misc
 - fix configure to work with recent gcc/clang (add some
   -Wno-implicit-function-declaration and other flags)
-- frontport ability to store source in Foo.ml or foo.ml  
+- backport ability to store source in Foo.ml or foo.ml  
   
 * Beta (2018) (plan9 support)
 
@@ -76,7 +77,7 @@
   for educational purpose (part of my principia softwarica project).
   This meant slightly refactor the asmcomp/ code that was the only user
   of functors (and maybe set and map)
-- backport (frontport?) a few features from recent OCaml to ocaml-light:
+- backport a few features from recent OCaml to ocaml-light:
     * record 'with' (see diff_with_record)
     * backtrace?
 
@@ -85,11 +86,11 @@
   mips. I just kept i386 and later backported the ARM port from ocaml 2.01!
 
 ** tools
-- frontport named regexps in ocamllex (let name = regexp ...)
+- backport named regexps in ocamllex (let name = regexp ...)
   
 ** stdlib
 # see also pad.txt changes section
-- frontport buffer.ml ? (from ?)
+- backport buffer.ml ? (from ?)
 
 ** build infra
 - a working configure that can work on some recent Mac and Linux
